<resources>
    <string name="app_name">Do I need it?</string>
    <string name="email_txt">Email</string>
    <string name="txt_password">Password</string>
    <string name="img_logo_description">Logo of the app</string>
    <string name="txt_btn_login">Login</string>
    <string name="txt_btn_to_register">No Account? Register here!</string>
    <string name="txt_btn_to_login">Already had an account? Login here!</string>
    <string name="txt_btn_register">Register</string>
    <string name="password_not_matched">Password not matched!</string>
    <string name="title_activity_items">ItemsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="item_add_title">Add Item Dialog</string>
    <string name="item_name">Item Name</string>
    <string name="item_quantity">Quantity</string>
    <string name="item_price">Price</string>
    <string name="txt_cb_purchased">Purchased</string>
    <string name="item_cancel">Cancel</string>
    <string name="item_add">Add</string>
</resources>